--- a/style.css
+++ b/style.css
@@ -110,6 +110,11 @@ button {
   box-shadow: 0 0.4rem 0.8rem 0 rgba(0, 0, 0, 0.2);
   margin-top: 1rem;
   cursor: pointer;
+  transition: 0.5s ease;
+}
+
+button:hover {
+  background-color: hsl(71, 73%, 45%);
 }
 
 ul {
