--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ main {
   box-shadow: 0 0.4rem 0.8rem 0 rgba(0, 0, 0, 0.2);
   border-radius: 0.5rem;
   overflow: hidden;
+  margin-top: 1rem;
 }
 
 section:first-of-type, .half {
@@ -117,7 +118,7 @@ ul {
 
 footer {
   font-size: 0.85rem;
-  margin: 0.5rem 1rem 0;
+  margin: 0.5rem 1rem 1rem;
   color: hsl(179, 62%, 43%);
 }
 
